fix loading display off screen

--- a/src/components/Issues/Issue/issue.scss
+++ b/src/components/Issues/Issue/issue.scss
@@ -16,6 +16,8 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        height: 100dvh;
+        width: 100%;
     }
 
     .modifications-container {
